--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <spring.version>4.0.0.RELEASE</spring.version>
         <com.mysql.jdbc>5.1.28</com.mysql.jdbc>
         <jackson.version>1.9.13</jackson.version>
+        <jexl.version>2.1.1</jexl.version>
+        <dom4j.version>20040902.021138</dom4j.version>
     </properties>
 
     <dependencies>
@@ -44,6 +46,16 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jexl</artifactId>
+            <version>${jexl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>${dom4j.version}</version>
         </dependency>
         <!-- test -->
         <dependency>
@@ -88,5 +100,6 @@
             <version>1.3.175</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 </project>
