--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,41 @@
         <digester.version>3.2</digester.version>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>emma-maven-plugin</artifactId>
+                <version>1.0-alpha-3</version>
+                <inherited>true</inherited>
+                <executions>
+                    <execution>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>instrument</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <inherited>true</inherited>
+                <configuration>
+                    <!--<includes>-->
+                        <!--<include>com.baidu.asf.model.XMLDefinitionTest</include>-->
+                        <!--<include>com.baidu.asf.model.EngineTest</include>-->
+                        <!--<include>*/*VariableTest.java</include>-->
+                        <!--<include>com.baidu.asf.engine.InclusiveGatewayTest</include>-->
+                    <!--</includes>-->
+                    <forkMode>once</forkMode>
+                    <reportFormat>html</reportFormat>
+                    <classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
